utilizando variaveis de ambiente

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
 			"problemMatcher": [
 				"$rustc"
 			],
-			"label": "Rust: cargo run - test-rust-pgsql"
+			"label": "Rust: cargo run - test-rust-pgsql",
 		}
 	]
 }
